--- a/src/app/views/page/page-new/page-new.component.html
+++ b/src/app/views/page/page-new/page-new.component.html
@@ -28,7 +28,7 @@
     <label for="page-title">Title</label>
     <input [(ngModel)]="pageTitle" type="text" class="form-control" id="page-title" placeholder="Page Title">
   </div>
-  <button routerLink=".." class="btn btn-success btn-block" (click)="createPage(pageName, pageTitle)">Create</button>
+  <button class="btn btn-success btn-block" (click)="createPage(pageName, pageTitle)">Create</button>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
