--- a/src/app/views/widget/widget-chooser/widget-new/new-header/new-header.component.html
+++ b/src/app/views/widget/widget-chooser/widget-new/new-header/new-header.component.html
@@ -32,7 +32,7 @@
     <label for="heading-size">Size</label>
     <input [(ngModel)]="size" type="text" class="form-control" id="heading-size" placeholder="3">
   </div>
-  <button routerLink="../.." class="btn btn-success btn-block" (click)="createHeader(text, size)">Create</button>
+  <button class="btn btn-success btn-block" (click)="createHeader(text, size)">Create</button>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
