--- a/src/app/views/user/profile/profile.component.html
+++ b/src/app/views/user/profile/profile.component.html
@@ -1,19 +1,18 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        Fixed Top
-      </a>
-      <p class="navbar-text pull-right">
-        <a href="#" class="navbar-link">
-            <span class="glyphicon glyphicon-plus">
-            </span>
-        </a>
-      </p>
-    </div>
-  </div>
-</nav>
-
+<!--<nav class="navbar navbar-default navbar-fixed-top">-->
+  <!--<div class="container-fluid">-->
+    <!--<div class="navbar-header">-->
+      <!--<a class="navbar-brand" href="#">-->
+        <!--Fixed Top-->
+      <!--</a>-->
+      <!--<p class="navbar-text pull-right">-->
+        <!--<a href="#" class="navbar-link">-->
+            <!--<span class="glyphicon glyphicon-plus">-->
+            <!--</span>-->
+        <!--</a>-->
+      <!--</p>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</nav>-->
 
 <div class="container">
 
@@ -30,6 +29,10 @@
   <div class="form-group">
     <label>Password</label>
     <input [(ngModel)]="user.password" type="password" class="form-control" placeholder={{user.password}}>
+  </div>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input [(ngModel)]="user.email" type="text" class="form-control" id="email" placeholder={{user.email}}>
   </div>
   <div class="form-group">
     <label for="first-name">First Name</label>
