--- a/src/app/views/widget/widget-chooser/widget-new/new-youtube/new-youtube.component.html
+++ b/src/app/views/widget/widget-chooser/widget-new/new-youtube/new-youtube.component.html
@@ -36,7 +36,7 @@
     <label for="youtube-width">Width</label>
     <input [(ngModel)]="width" type="text" class="form-control" id="youtube-width" placeholder="100%">
   </div>
-  <button routerLink="../.." class="btn btn-success btn-block" (click)="createYoutube(text, url, width)">Create</button>
+  <button class="btn btn-success btn-block" (click)="createYoutube(text, url, width)">Create</button>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
