--- a/src/app/views/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/views/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -36,8 +36,8 @@
     <label for="youtube-width">Width</label>
     <input [(ngModel)]="curWidget.width" type="text" class="form-control" id="youtube-width" placeholder="100%">
   </div>
-  <button routerLink=".." class="btn btn-success btn-block" (click)="updateWidget(curWidget)">Update</button>
-  <button routerLink=".." class="btn btn-danger btn-block" (click)="deleteWidget(curWidget._id)">Delete</button>
+  <button class="btn btn-success btn-block" (click)="updateWidget(curWidget)">Update</button>
+  <button class="btn btn-danger btn-block" (click)="deleteWidget(curWidget._id)">Delete</button>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
