--- a/src/app/views/widget/widget-chooser/widget-new/new-image/new-image.component.html
+++ b/src/app/views/widget/widget-chooser/widget-new/new-image/new-image.component.html
@@ -52,6 +52,7 @@
     <br/>
   </form>
 
+  <button class="btn btn-primary btn-block" routerLink="../../{{wgId}}/flickr" >Search Image</button>
   <button class="btn btn-success btn-block" (click)="createImage(text, url, width)">Create</button>
 </div>
 
