--- a/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
@@ -51,8 +51,7 @@
     <br/>
   </form>
 
-
-  <!--<a class="btn btn-primary btn-block" >Upload Image</a>-->
+  <button class="btn btn-primary btn-block" routerLink="flickr" >Search Image</button>
   <button class="btn btn-success btn-block" (click)="updateWidget(curWidget)">Update</button>
   <button class="btn btn-danger btn-block" (click)="deleteWidget(curWidget._id)">Delete</button>
 </div>
