run successfully in local

--- a/src/app/views/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/views/widget/widget-chooser/widget-chooser.component.html
@@ -23,10 +23,10 @@
       <a >Label</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a >HTML</a>
+      <a routerLink="html">HTML</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a >Text Input</a>
+      <a routerLink="text">Text Input</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a >Link</a>
