--- a/src/app/views/widget/widget-chooser/widget-new/widget-new.component.html
+++ b/src/app/views/widget/widget-chooser/widget-new/widget-new.component.html
@@ -12,6 +12,14 @@
     <app-new-youtube></app-new-youtube>
   </div>
 
+  <div *ngSwitchCase="'html'">
+    <app-new-html></app-new-html>
+  </div>
+
+  <div *ngSwitchCase="'text'">
+    <app-new-text></app-new-text>
+  </div>
+
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
