--- a/src/app/views/user/register/register.component.html
+++ b/src/app/views/user/register/register.component.html
@@ -10,7 +10,7 @@
          class="form-control"
          placeholder="very password"/>
 
-  <button routerLink="/login" class="btn btn-primary btn-block" (click)="createUser(username, password, passVal)">Register</button>
+  <button routerLink="/login" class="btn btn-primary btn-block" (click)="register(username, password, passVal)">Register</button>
   <a class="btn btn-danger  btn-block"
      routerLink="/login">Cancel</a>
 
