--- a/src/app/views/widget/widget-chooser/widget-new/new-image/new-image.component.html
+++ b/src/app/views/widget/widget-chooser/widget-new/new-image/new-image.component.html
@@ -52,7 +52,7 @@
     <br/>
   </form>
 
-  <button class="btn btn-primary btn-block" routerLink="../../{{wgId}}/flickr" >Search Image</button>
+  <!--<button class="btn btn-primary btn-block" routerLink="../../{{wgId}}/flickr" >Search Image</button>-->
   <button class="btn btn-success btn-block" (click)="createImage(text, url, width)">Create</button>
 </div>
 
@@ -60,7 +60,7 @@
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/user/{{userId}}" class="cl-icon-padding">
+      <a routerLink="/user" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
