--- a/src/app/views/widget/widget-chooser/widget-new/new-text/new-text.component.html
+++ b/src/app/views/widget/widget-chooser/widget-new/new-text/new-text.component.html
@@ -50,7 +50,7 @@
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/user/{{userId}}" class="cl-icon-padding">
+      <a routerLink="/user" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
