--- a/src/app/views/user/profile/profile.component.html
+++ b/src/app/views/user/profile/profile.component.html
@@ -46,9 +46,8 @@
   <button class="btn btn-success btn-block" (click)="updateUser(user)">Update</button>
 
   <a class="btn btn-primary btn-block"
-     routerLink="/user/{{user._id}}/website">Websites</a>
-  <a class="btn btn-danger  btn-block"
-     [routerLink]="['/login']">Logout</a>
+     routerLink="/user/website">Websites</a>
+  <a class="btn btn-danger  btn-block" (click)="logout()">Logout</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
