--- a/src/app/views/website/website-new/website-new.component.html
+++ b/src/app/views/website/website-new/website-new.component.html
@@ -3,14 +3,14 @@
     <div class="col-xs-4 hidden-xs">
       <div class="container-fluid">
         <p class="navbar-text pull-left">
-          <a routerLink="/user/{{userId}}/website" class="navbar-link cl-text-white">
+          <a routerLink="/user/website" class="navbar-link cl-text-white">
             <span class="glyphicon glyphicon-chevron-left"></span>
           </a>
         </p>
         <a class="cl-text-white navbar-brand cl-text-bold">
           Websites
         </a>
-        <a routerLink="/user/{{userId}}/website/new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a routerLink="/user/website/new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-plus"></span>
         </a>
       </div>
@@ -20,7 +20,7 @@
         <a class="cl-text-white navbar-brand cl-text-bold">
           New Websites
         </a>
-        <a routerLink="/user/{{userId}}/website" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a routerLink="/user/website" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </div>
@@ -32,8 +32,8 @@
   <div class="col-xs-4 hidden-xs">
     <ul class="list-group cl-list-group-borderless">
       <li *ngFor = "let website of websites" class="list-group-item cl-list-item-borderless">
-        <a routerLink="/user/{{userId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a routerLink="/user/{{userId}}/website/{{website._id}}/page">{{website.name}}</a>
+        <a routerLink="/user/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+        <a routerLink="/user/website/{{website._id}}/page">{{website.name}}</a>
       </li>
     </ul>
   </div>
@@ -52,7 +52,7 @@
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="/user/{{userId}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/user" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a>
   </div>
