--- a/src/app/views/widget/widget-chooser/widget-new/new-header/new-header.component.html
+++ b/src/app/views/widget/widget-chooser/widget-new/new-header/new-header.component.html
@@ -22,7 +22,7 @@
 <div class="container">
   <div class="form-group">
     <label for="heading-name">Name</label>
-    <input type="text" class="form-control" id="heading-name" placeholder="Name">
+    <input [(ngModel)]="name" type="text" class="form-control" id="heading-name" placeholder="Name">
   </div>
   <div class="form-group">
     <label for="heading-text">Text</label>
@@ -32,14 +32,14 @@
     <label for="heading-size">Size</label>
     <input [(ngModel)]="size" type="text" class="form-control" id="heading-size" placeholder="3">
   </div>
-  <button class="btn btn-success btn-block" (click)="createHeader(text, size)">Create</button>
+  <button class="btn btn-success btn-block" (click)="createHeader(text, size, name)">Create</button>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/user/{{userId}}" class="cl-icon-padding">
+      <a routerLink="/user" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
