--- a/src/app/views/widget/widget-edit/widget-edit.component.html
+++ b/src/app/views/widget/widget-edit/widget-edit.component.html
@@ -1,6 +1,6 @@
 <div [ngSwitch]="widget.widgetType">
 
-  <div *ngSwitchCase="'HEADER'">
+  <div *ngSwitchCase="'HEADING'">
     <app-widget-header></app-widget-header>
   </div>
 
@@ -25,7 +25,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
-      <a routerLink="/user/{{userId}}" class="cl-icon-padding">
+      <a routerLink="/user" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </div>
