--- a/src/app/views/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/views/widget/widget-edit/widget-header/widget-header.component.html
@@ -22,7 +22,7 @@
 <div class="container">
   <div class="form-group">
     <label for="heading-name">Name</label>
-    <input type="text" class="form-control" id="heading-name" placeholder="Name">
+    <input [(ngModel)]="curWidget.name" type="text" class="form-control" id="heading-name" placeholder="Name">
   </div>
   <div class="form-group">
     <label for="heading-text">Text</label>
@@ -40,7 +40,7 @@
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/user/{{userId}}" class="cl-icon-padding">
+      <a routerLink="/user" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
