--- a/src/app/views/user/login/login.component.html
+++ b/src/app/views/user/login/login.component.html
@@ -12,7 +12,11 @@
 
     <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
 
-    <a href="http://localhost:3100/facebook/login" class="btn btn-primary btn-block">
+    <!--<a href="https://localhost:3100/facebook/login" class="btn btn-primary btn-block">-->
+      <!--<span class="fa fa-facebook"></span>-->
+      <!--Facebook-->
+    <!--</a>-->
+    <a href="https://frank-web-project.herokuapp.com/facebook/login" class="btn btn-primary btn-block">
       <span class="fa fa-facebook"></span>
       Facebook
     </a>
